--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,6 +14,8 @@ citibike {
 citibike2 {
   statusUrl="http://www.citibikenyc.com/stations/json"
   stations {
-    favorites=["3148","281"]
+    favorites.default=["3230"]
+    favorites.set1=["3148","281"]
+    favorites.set2=["434","463"]
   }
 }
