HTML page pass param to service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,7 +15,7 @@ citibike2 {
   statusUrl="http://www.citibikenyc.com/stations/json"
   stations {
     favorites.penn=["3230"]
-    favorites.test=["3148","281"]
-    favorites.chelsea=["434","463","116","212","225"]
+    favorites.chaos=["3150","3148","3132","281","352"]
+    favorites.julia=["434","463","116","212","225","3168","3226"]
   }
 }
