Setting up to pull weather data to help decide if it's good conditions for bike riding

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,4 @@
+#include "secret"
 citibike {
   statusUrl="http://appservices.citibikenyc.com/v1/station/updates"
   stations {
@@ -12,4 +13,8 @@ citibike2 {
     favorites.chaos=["3150","3148","3132","281","352"]
     favorites.julia=["434","463","116","212","225","3168","3226"]
   }
+}
+
+darksky {
+  forecastUrl="https://api.forecast.io/forecast/{key}/40.7127,-74.0059"
 }
