setup testing using static files instead of real endpoints, now that we have rate limit on weather api.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-#include "secret"
+#include "secret.conf"
 citibike {
   statusUrl="http://appservices.citibikenyc.com/v1/station/updates"
   stations {
@@ -11,7 +11,7 @@ citibike2 {
   stations {
     favorites.penn=["3230"]
     favorites.chaos=["3150","3148","3132","281","352"]
-    favorites.julia=["434","463","116","212","225","3168","3226"]
+    favorites.chelsea=["434","463","116","212","225","3168","3226"]
   }
 }
 
