--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>embeddedTomcatSample</finalName>
