add new station list set, and minor cleanups

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,7 @@ citibike2 {
     favorites.penn=["3230"]
     favorites.chaos=["3150","3148","3132","281","352"]
     favorites.chelsea=["434","463","116","212","225","3168","3226"]
+    favorites.sr=["137", "520", "3132", "281", "3148","3150"]
   }
 }
 
